# TelegramRPBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  lint.yaml  publish.yaml
bot/: ai.py  auth.py  base_bot.py  base_handlers.py  bot.py  config.py  config_models.py  db.py  decorators.py  handler_decorators.py  handlers.py  keyboards.py  localizer.py  main.py  old_bot.py  rp_bot.py  settings.py  telegram_bot.py  utils.py
bot/ai/: ai.py  audio.py  image.py  openai_utils.py  text.py
bot/db/: db.py
bot/decorators/: auth.py  handlers.py
bot/handlers/callbacks/: delete_chat_mode.py  set_chat_mode.py  show_chat_model.py
bot/handlers/commands/: addmode.py  clearfacts.py  deletemode.py  help.py  language.py  reset.py
bot/handlers/handlers/: get_reply.py
bot/localizer/: localizer.py
bot/models/: base_auth.py  base_bot.py  base_handlers.py  base_moderation.py  config.py  handlers_input.py  handlers_response.py  localizer.py
bot/models/config/: __init__.py  ai_config.py  auth_config.py  base_config.py  bot_config.py  db_config.py  default_chat_modes.py  localizer_translations.py  tg_config.py
bot/rp_bot/: agent_runtime.py  ai.py  auth.py  base_handlers.py  bot.py  db.py  keyboards.py  localizer.py  memory_manager.py  memory_utils.py  openai_agents_runtime.py  prompt_manager.py  rp_bot_handlers.py
bot/rp_bot/ai_agent/: README.md  ai.py  models_toolkit.py  (+1 more)
bot/telegram/: bot.py  keyboards.py  telegram_bot.py  utils.py  wrappers.py
config/: ai.yml  ai_config.yaml  ai_config.yml  bot_config.yaml  config_models.py  db_config.yaml  db_config.yml  default_chat_modes.yaml  default_chat_modes.yml  localizer.yml  localizer_translations.yaml  models.yml  telegram.yml  telegram_bot_config.yaml  tg_config.yaml
docs/: memory-management-optimization.md
experimental/: bot.py
init/: 01-init-app-user.js
tests/: test_base_config.py  test_localizer.py  test_main.py  test_message_handler.py  test_telegram_utils.py
(+66 files in other folders)
