[tool.poetry]
name = "telegramrpbot"
package-mode = false
version = "0.0.0"
description = "Bring the ability to setup a full roleplay experience in your telegram group chats."
authors = ["Anton Potapov <fgreyeducation@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = {version="20.1", extras=["rate-limiter"]}
tiktoken = "^0.7.0"
PyYAML = "6.0"
motor = "*"
python-decouple = "*"
tenacity = "8.2.2"
pydub = "^0.25.1"
pydantic = "^2.7.4"
omnimodkit = "0.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
